[gd_scene load_steps=12 format=3 uid="uid://hhfrjij4b1av"]

[ext_resource type="StyleBox" uid="uid://c3cas32kh5fua" path="res://Colors/normal_function_style.tres" id="1_4dh0g"]
[ext_resource type="Script" path="res://Scripts/calculator.gd" id="1_qr4yw"]

[sub_resource type="SystemFont" id="SystemFont_3m35m"]
font_names = PackedStringArray("Roboto")

[sub_resource type="SystemFont" id="SystemFont_ekkwt"]
font_names = PackedStringArray("Roboto")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr87i"]
bg_color = Color(0.051971, 0.051971, 0.051971, 1)
border_width_top = 1
border_width_right = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25fcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kore8"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_top = 1
border_width_right = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnbe1"]
bg_color = Color(0.0383972, 0.0383972, 0.0383972, 1)
border_width_top = 1
border_width_right = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2171o"]
bg_color = Color(0.223592, 0.659969, 0.611686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr2bo"]
bg_color = Color(0.495831, 0.94402, 0.886791, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aoii7"]
bg_color = Color(0.119718, 0.402357, 0.371304, 1)

[node name="Calculator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr4yw")

[node name="Screen" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -300.0
offset_right = 166.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AllComponentsContainer" type="VBoxContainer" parent="Screen/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DIsplayContainer" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/ColorRect/AllComponentsContainer/DIsplayContainer"]
layout_mode = 2
theme_override_constants/margin_top = 105
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer/DIsplayContainer/MarginContainer"]
layout_mode = 2

[node name="PrevWorkArea" type="Label" parent="Screen/ColorRect/AllComponentsContainer/DIsplayContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.47788, 0.47788, 0.47788, 1)
theme_override_fonts/font = SubResource("SystemFont_3m35m")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 2

[node name="WorkArea" type="Label" parent="Screen/ColorRect/AllComponentsContainer/DIsplayContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_3m35m")
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 2

[node name="AllButtons" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer"]
layout_mode = 2

[node name="TopButtons" type="GridContainer" parent="Screen/ColorRect/AllComponentsContainer/AllButtons"]
layout_mode = 2
columns = 4

[node name="Clear_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "C"

[node name="Negate_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "+ / -"

[node name="Delete_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "<-"

[node name="Divide_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "/"

[node name="7" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "7"

[node name="8" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "8"

[node name="9" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "9"

[node name="Multiplication_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "x"

[node name="4" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "4"

[node name="5" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "5"

[node name="6" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "6"

[node name="Substraction_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "-"

[node name="1" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "1"

[node name="2" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "2"

[node name="3" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "3"

[node name="Addition_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.521141, 0.521141, 0.52114, 1)
theme_override_fonts/font = SubResource("SystemFont_ekkwt")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("1_4dh0g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kr87i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "+"

[node name="BottomButtons" type="HBoxContainer" parent="Screen/ColorRect/AllComponentsContainer/AllButtons"]
layout_mode = 2

[node name="0" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(164, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "0"

[node name="Decimal_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kore8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dnbe1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "."

[node name="Equal_btn" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_2171o")
theme_override_styles/hover = SubResource("StyleBoxFlat_lr2bo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aoii7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_25fcn")
text = "="

[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Clear_btn" to="." method="_on_clear_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Negate_btn" to="." method="_on_negate_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Delete_btn" to="." method="_on_delete_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Divide_btn" to="." method="_on_divide_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Multiplication_btn" to="." method="_on_multiplication_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Substraction_btn" to="." method="_on_substraction_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/Addition_btn" to="." method="_on_addition_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons/Decimal_btn" to="." method="_on_decimal_btn_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons/Equal_btn" to="." method="_on_equal_btn_pressed"]
